update jvm tuning